fix: fix text positioning on subscribe button, align ask ft padding to other buttons

--- a/components/o-header/src/scss/features/_drawer.scss
+++ b/components/o-header/src/scss/features/_drawer.scss
@@ -149,7 +149,7 @@
 	}
 
 	.o-header__drawer-button {
-		display: block;
+		width: 100%;
 	}
 
 	//
